tests/miz/fail/types/fail_type_elaboration_attributed_reserve_gap_001.miz
import parser.type_fixtures;
reserve x for non empty set;
